--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,6 @@
         <source src="/nav-background3.webm" type="video/mp4">
     </video>
     <header>
-
         <div class="logo-container">
             <a href="#home">
                 <h1 class="logo">
@@ -25,7 +24,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
                     <a href="#">All Comics</a>
