--- a/client/src/components/home/section/Section.module.css
+++ b/client/src/components/home/section/Section.module.css
@@ -1,14 +1,3 @@
-main {
-    margin: 50px auto;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:flex-start;
-    gap: 50px;
-}
-
 .section-container {
     margin: 60px;
     margin-top: 80px;
@@ -22,6 +11,7 @@ main {
     /* opacity: 0.95; */
     flex: 1 0 100%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     z-index: 0;
 }
@@ -31,7 +21,7 @@ main {
     align-items: center;
     justify-content: center;
 
-    & h1 {
+    & .section-title {
         margin-top: 80px;
         text-transform: uppercase;
         font-weight: 800;
@@ -51,11 +41,7 @@ main {
     flex-wrap: wrap;
 }
 
-.list-container ul {
+.list {
     display: flex;
     flex-wrap: wrap;
-    
-    & li {
-        flex: 1 1 20%;
-    }
 }
