--- a/client/src/components/home/section/Section.module.css
+++ b/client/src/components/home/section/Section.module.css
@@ -4,6 +4,7 @@
     padding: 30px;
     padding-bottom: 120px;
     width: calc(100% - 120px);
+    min-height: 360px;
     background: #87e3fff4;
     border: 2px solid #c362ff;
     border-radius: 12px;
@@ -11,7 +12,6 @@
     /* opacity: 0.95; */
     flex: 1 0 100%;
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     z-index: 0;
 }
@@ -19,7 +19,7 @@
 .title-container {
     flex: 0 1 30%;
     align-items: center;
-    justify-content: center;
+    align-self: center;
 
     & .section-title {
         margin-top: 80px;
