--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <video class="background-video" playbackRate=2 autoplay loop muted poster="/background-poster.png">
-        <source src="/nav-background3.webm" type="video/mp4">
+        <source src="../nav-background3.webm" type="video/mp4">
     </video>
     <header>
         <div class="logo-container">
