--- a/client/src/components/comicsList/ComicsList.module.css
+++ b/client/src/components/comicsList/ComicsList.module.css
@@ -1,70 +1,81 @@
 .comic-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
-    background-color: #f5f5f5;
-  }
-  
-  .sort-button, .pagination button {
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 5px;
-    transition: background 0.3s ease;
-    margin: 5px;
-  }
-  
-  .sort-button:hover, .pagination button:hover {
-    background-color: #0056b3;
-  }
-  
-  .pagination {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .pagination button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  .comic-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-  }
-  
-  .comic-card {
-    width: 180px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    background-color: white;
-    text-align: center;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .comic-card:hover {
-    transform: scale(1.05);
-  }
-  
-  .comic-cover {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  .comic-title {
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #333;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.sort-button,
+.pagination button {
+  flex: 0 1;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  transition: background 0.3s ease;
+  margin: 5px;
+}
+
+.sort-button:hover,
+.pagination button:hover {
+  background-color: #0056b3;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.pagination button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.comic-list {
+  margin: 60px;
+  margin-top: 80px;
+  padding: 30px;
+  padding-bottom: 12vw;
+  width: calc(100% - 120px);
+  height: fit-content;
+  background: #87e3fff4;
+  border: 2px solid #c362ff;
+  border-radius: 12px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  flex: 1 0 100%;
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  z-index: 0;
+}
+
+.comic-card {
+  width: 180px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.comic-card:hover {
+  transform: scale(1.05);
+}
+
+.comic-cover {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.comic-title {
+  padding: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+}
