--- a/client/src/components/home/section/Section.module.css
+++ b/client/src/components/home/section/Section.module.css
@@ -2,30 +2,31 @@
     margin: 60px;
     margin-top: 80px;
     padding: 30px;
-    padding-bottom: 120px;
+    padding-bottom: 7vw;
     width: calc(100% - 120px);
-    min-height: 360px;
+    min-height: 19vw;
     background: #87e3fff4;
     border: 2px solid #c362ff;
     border-radius: 12px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    /* opacity: 0.95; */
     flex: 1 0 100%;
     display: flex;
     flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
     z-index: 0;
 }
 
 .title-container {
-    flex: 0 1 30%;
-    align-items: center;
-    align-self: center;
+    flex: 0 1 calc(30% - 7px);
+    align-content: center;
+    justify-self: center;
 
     & .section-title {
-        margin-top: 80px;
+        margin-top: 4vw;
         text-transform: uppercase;
         font-weight: 800;
-        font-size: calc(1rem + min(65px, 5vw));
+        font-size: calc(1em + min(65px, 5vw));
         text-align: center;
         color: #ffe262;
         text-shadow: 5px 5px #ff9462;
@@ -37,11 +38,11 @@
 }
 
 .list-container {
-    flex: 0 1 70%;
+    flex: 0 1 calc(70% - 8px);
     flex-wrap: wrap;
 }
 
 .list {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
