--- a/client/src/components/spinner/Spinner.module.css
+++ b/client/src/components/spinner/Spinner.module.css
@@ -1,32 +1,40 @@
 .loader {
-    display: inline-block;
-    font-size: 48px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    color: #FFF;
-    position: relative;
-    z-index: 5;
+
+  background: #c362ffcb;
+  text-align: center;
+  width: 5em;
+  margin:0 calc((100% - 5em) / 2);
+  margin-top: 250px;
+  border: 3px solid #ff9462;
+  border-radius: 15px;
+  display: inline-block;
+  font-size: 48px;
+  font-weight: bold;
+  color: #62daff;
+  position: relative;
+  z-index: 1;
+}
+
+.loader::before {
+  content: '';
+  position: absolute;
+  left: 58px;
+  bottom: 20px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 5px solid #62daff;
+  border-bottom-color: #FF3D00;
+  animation: rotation 0.6s linear infinite;
+  z-index: 1;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
   }
-  .loader::before {
-    content: '';  
-    position: absolute;
-    left: 34px;
-    bottom: 8px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 5px solid #FFF;
-    border-bottom-color: #FF3D00;
-    box-sizing: border-box;
-    animation: rotation 0.6s linear infinite;
-    z-index: 5;
+
+  100% {
+    transform: rotate(360deg);
   }
-  
-  @keyframes rotation {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  } 
+}
